...
                      WorkspaceSection.archive,
                      WorkspaceSection.feed,
                    ].contains(section) &&
                    (projectId == null || store.canEdit(projectId!)))
                  addButton(
                    projectId != null
                        ? 'Add to list'
                        : section == WorkspaceSection.inbox
                        ? 'Quick capture'
                        : [
                            WorkspaceSection.reminders,
                            WorkspaceSection.today,
                          ].contains(section)
...
